--- a/hello-world.html
+++ b/hello-world.html
@@ -6,12 +6,15 @@
 <p>We'll start with languages that the Epicodus staff could offer without using Google. </p>
 
 <ul>
-    <li> English: Hello, world! </li>
+    <li>
+        English:
+        <ul>
+            <li>Hello, world!</li>
+            <li>Hi, world!</li>
+        </ul>
+    </li>
     <li> Spanish: Hola, mundo! </li>
     <li> Japanese: Konnichiwa, sekai! </li>
     <li> French: Bonjour, monde! </li>
     <li> Kinyarwanda: Mwirwe, isi! </li>
-    <li> Hello</li>
-    <li> Kinyarwanda: Mwirwe, isi! </li>
-    <li> Hello</li>
 </ul>
