add image placeholder

--- a/hello-world.html
+++ b/hello-world.html
@@ -18,3 +18,5 @@
     <li> French: Bonjour, monde! </li>
     <li> Kinyarwanda: Mwirwe, isi! </li>
 </ul>
+
+<img src="https://picsum.photos/200/300" alt="image placeholder">
